--- a/milestone-1/css/style.css
+++ b/milestone-1/css/style.css
@@ -3,8 +3,12 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+img{
+    width: 100%;
+}
 .wrapper{
-    background-color: #d8dbd6;
+    background: linear-gradient(180deg , #009688 10%,#d8dbd6 10%);
     height: 100vh;
     position: relative;
     padding: 20px 0px 20px 0px;
@@ -25,7 +29,25 @@
 .chat-wrapper{
     width: 80%;
     height: 100%;
-    background-color: white;
+    background-color: rgb(234, 234, 234);
     margin: auto; 
     position: relative;
+
+}
+
+.chat-header .left{
+    width: 20%;
+    display: flex;
+}
+
+.profile-img{
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+}
+.profile-img img{
+    width: 50px;
+    aspect-ratio: 1,1;
+    border-radius: 50%;
+    overflow: hidden;
 }
