--- a/milestone-1/css/style.css
+++ b/milestone-1/css/style.css
@@ -37,6 +37,7 @@ img{
 }
 .chat-wrapper .left{
     width: 30%;
+    flex-shrink: 0;
 }
 
 .chat-wrapper .right{
@@ -95,6 +96,10 @@ img{
     overflow: auto;
 }
 
+.chat-main{
+    display: flex;
+}
+
 .chat-main .left{
     height: 100%;
     display: flex;
@@ -141,4 +146,45 @@ img{
 .time{
     justify-self: end;
     color: #b1b1b1;
+}
+
+.chat-main .right{
+    display: flex;
+    flex-direction: column;
+}
+
+.chat-main .chat{
+    background-image: url('../../img/mine.jpg') ;
+    background-color: blue;
+    height: calc(100% - 50px);
+    width: 100%;
+    overflow: auto;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.msg:first-child{
+    margin-top: 30px;
+}
+
+.msg{
+    min-width: 40%;
+    margin: 5px 20px;
+    border-radius: 5px;
+    padding: 10px;
+    align-self: flex-start;
+}
+
+.msg.sent{
+    background-color: #d5f9ba;
+    align-self: flex-end;
+}
+
+.msg.received{
+    background-color: #ffffff;
+}
+
+.msg .time{
+    font-size: .6rem;
+    text-align: end;
 }
